implementaçao de gestao de dias
